force-app/main/default/objects/Test_Ride_Assignment__c/Test_Ride_Assignment__c.object-meta.xml
<CustomObject>
    <label>Test Ride Assignment</label>
    <nameField>
        <displayFormat>TR-{0000000}</displayFormat>
        <label>Test Ride Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Ride Assignment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>