force-app/main/default/objects/Test_Ride_Assignment__c/fields/Is_Actived__c.field-meta.xml
<CustomField>
    <fullName>Is_Actived__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Activated</label>
    <type>Checkbox</type>
</CustomField>