force-app/main/default/objects/Test_Ride_Assignment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Test Ride Assignment</relationshipLabel>
    <relationshipName>Test_Ride_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>