force-app/main/default/objects/Test_Ride_Assignment__c/fields/Test_Ride__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride__c</fullName>
    <label>Test Ride</label>
    <referenceTo>Test_Ride__c</referenceTo>
    <relationshipLabel>Test Ride Assignment</relationshipLabel>
    <relationshipName>Test_Ride_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>